# Jiosaavn_Download

./: .gitignore  Jiosaavn_cache  README.md  main.py  pyproject.toml  requirements.txt  requirements2.txt  run.bat  test.ipynb  userinput.json
src/ak_jiosaavn/: __init__.py  audio.py  cli_app.py  main.py  parsinator.py  slack.py
src/tests/: test_audio.py  test_slack.py
util/: main_util_class.py
